# adp-chat-client

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  Makefile  README.cn.md  README.md  package-lock.json
client/: package-lock.json  package.json
docker/: Dockerfile
docs/: .env.example  .gitignore  .vercelignore  BUILD_GUIDE.md  deploy-edgeone.sh  middleware.ts  next.config.mjs  package-lock.json  package.json  vercel.json
server/: .env.example  .flake8  app_factory.py  main.py  pyproject.toml
server/config/: __init__.py  app_config.py  oauth_config.py  pgsql_config.py  redis_config.py  tcadp_config.py
server/core/: account.py  chat.py  completion.py  conversation.py  migration.py  oauth.py  session.py  share.py
server/core/error/: __init__.py  account.py  server.py
server/middleware/: application.py  database.py  exception.py  limit.py  performance.py  security.py
server/model/: __init__.py  account.py  base.py  chat.py
server/oauth_provider/: interface.py
server/oauth_provider/github/: __init__.py  github.py
server/oauth_provider/ms_entra_id/: __init__.py  ms_entra_id.py
server/router/: __init__.py  account.py  application.py  chat.py  feedback.py  file.py  helper.py  login.py  oauth.py  reference.py  share.py  static.py  system.py
server/test/unit_test/: conftest.py  test_account.py  test_chat.py  test_login.py  test_reference.py  test_tcadp_thought.py
server/util/: auth_cookie.py  database.py  helper.py  json_format.py  module.py  password.py  tca.py  warehouse.py
(+106 files in other folders)
