[project]
name = "adp-chat-client"
version = "0.1.0"
description = "backend for the adp-chat-client"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aioboto3==15.0.0",
    "aiohttp==3.12.13",
    "asyncpg==0.30.0",
    "greenlet==3.2.3",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "sanic==25.3.0",
    "sanic-ext==24.12.0",
    "sanic-restful-api==0.2.1",
    "sanic-routing==23.12.0",
    "sqlalchemy==2.0.41",
    "termcolor==3.1.0",
    "ujson==5.10.0",
    "limits>=5.6.0",
    "jwcrypto>=1.5.6",
]
[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "sanic-testing==24.6.0",
]
